--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <h1 id='countdown'>Beaming profile to Discord in 5 seconds...</h1>
 
-        <p id='manual'>If it doesn't work, click <a href='discord://-/users/339492485854396426'>here</a>.</p>
+        <p id='manual'>Or press <a href='discord://-/users/339492485854396426'>here</a>.</p>
 
         <!-- Github Source footer -->
         <a id='source' href='https://github.com/Lozarth/addmeondiscord'>Website Source</a>
@@ -18,7 +18,7 @@
                 let closeTime = 10
                 const interval = setInterval(function() {
                     closeTime--
-                    
+
                     if (closeTime <= 0) {
                         clearInterval(interval)
                         window.close()
