--- a/instructions.html
+++ b/instructions.html
@@ -10,8 +10,8 @@
     <h1>How to use this website?</h1>
     <p>Copy your Discord ID</p>
     <p>Then add your Discord ID to the end of this link:</p>
-    <p>https://discordprofile.lozarth.xyz/xxxxxxxxxxxxxx</p>
-    <p>Replace the x's with your Discord ID</p>
+    <p>https://discordprofile.lozarth.xyz#xxxxxxxxxxxx</p>
+    <p>Replace the x's with your Discord ID (Leave the hashtag!)</p>
     <p>You can use this link to redirect people to your Discord profile using your ID instead of sharing your
         ever-changing username and tag.</p>
     <p>This link will send your profile to their Discord client or on mobile, to their Discord app</p>
