--- a/instructions.html
+++ b/instructions.html
@@ -8,14 +8,19 @@
 <body>
     <!-- Show instructions on how to use website -->
     <h1>How to use this website?</h1>
-    <p>Copy your Discord ID</p>
-    <p>Then add your Discord ID to the end of this link:</p>
-    <p>https://discordprofile.lozarth.xyz#xxxxxxxxxxxx</p>
-    <p>Replace the x's with your Discord ID (Leave the hashtag!)</p>
+    <ol type="1">
+        <li>Copy your Discord ID</li>
+        <li>Then add your Discord ID to the end of this link: https://discordprofile.lozarth.xyz#xxxxxxxxxxxx</li>
+        <li>Replace the x's with your Discord ID (Leave the hashtag!)</li>
+    </ol>
+
+    <p>Example:</p>
+    <img src="example.png" alt="example">
+
     <p>You can use this link to redirect people to your Discord profile using your ID instead of sharing your
         ever-changing username and tag.</p>
-    <p>This link will send your profile to their Discord client or on mobile, to their Discord app</p>
-    <img src="example.png" alt="example">
+    <p>This link will send your profile to their Discord client or on mobile, to their Discord app.</p>
+    <p>Alternatively, if they do not have Discord installed on their device they can simply click on the hyperlink which leads to the web version of your profile.</p>
 
     <style>
         body {
@@ -29,6 +34,10 @@
         }
 
         p {
+            text-align: center;
+        }
+
+        ol {
             text-align: center;
         }
 
