--- a/instructions.html
+++ b/instructions.html
@@ -10,7 +10,7 @@
     <h1>How to use this website?</h1>
     <ol type="1">
         <li>Copy your Discord ID</li>
-        <li>Then add your Discord ID to the end of this link: https://discordprofile.lozarth.xyz#xxxxxxxxxxxx</li>
+        <li>Then add your Discord ID to the end of this link: https://discordprofile.lozarth.xyz/#xxxxxxxxxxxx</li>
         <li>Replace the x's with your Discord ID (Leave the hashtag!)</li>
     </ol>
 
