--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <title>Profile - Add me on Discord</title>
 
+    <meta property="og:type" content="website" />
+
     <script>
         var id = window.location.hash.substr(1)
         console.log(id)
@@ -15,6 +17,47 @@
         if (id === undefined || id === '' || id === null || isNaN(id)) {
             window.location.href = '/instructions.html'
         }
+    </script>
+
+    <script>
+        // Fetch user info from replit proxy and edit meta tags and title accordingly
+        fetch(`https://addmeondiscord.lozarth.repl.co/userinfo/${id}`)
+            .then(response => response.json())
+            .then(data => {
+                /*
+                Example data:
+                    {
+                        "id": "339492485854396426",
+                        "username": "shrigma",
+                        "avatar": "da2a8e2e5d4edee5ee2b1fffbf662944",
+                        "avatar_decoration": null,
+                        "discriminator": "1957",
+                        "public_flags": 4194304,
+                        "banner": "e3ae8548630df417644106785c70c8c8",
+                        "banner_color": null,
+                        "accent_color": null
+                    }
+                */
+
+                console.log(data)
+
+                document.title = `${data.username}#${data.discriminator} - Add me on Discord`
+
+                const metaTitle = document.createElement('meta')
+                metaTitle.property = 'og:title'
+                metaTitle.content = `Add ${data.username}#${data.discriminator} on Discord!`
+
+                const metaDescription = document.createElement('meta')
+                metaDescription.property = 'og:description'
+                metaDescription.content = `https://discordprofile.lozarth.xyz/`
+
+                const metaImage = document.createElement('meta')
+                metaImage.property = 'og:image'
+                metaImage.content = `https://cdn.discordapp.com/avatars/${data.id}/${data.avatar}.png`
+
+
+                document.getElementsByTagName('head')[0].appendChild(meta)
+            })
     </script>
 </head>
 
