--- a/instructions.html
+++ b/instructions.html
@@ -21,6 +21,8 @@
     <p>This link will send your profile to their Discord client or on mobile, to their Discord app.</p>
     <p>Alternatively, if they do not have Discord installed on their device they can simply click on the hyperlink which
         leads to the web version of your profile.</p>
+    
+    <a id='source' href='https://github.com/Lozarth/addmeondiscord'>Website Source</a>
 
     <style>
         body {
@@ -47,6 +49,15 @@
             margin-right: auto;
             width: 50%;
             border-radius: 25px;
+        }
+        
+        #source {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            margin: 10px;
+            color: #dcddde;
+            text-decoration: none;
         }
     </style>
 </body>
