--- a/instructions.html
+++ b/instructions.html
@@ -19,8 +19,8 @@
     <p>You can use this link to redirect people to your Discord profile using your ID instead of sharing your
         ever-changing username and tag.</p>
     <p>This link will send your profile to their Discord client or on mobile, to their Discord app.</p>
-    <p>Alternatively, if they do not have Discord installed on their device they can simply click on the hyperlink which
-        leads to the web version of your profile.</p>
+    <p>Alternatively, if they do not have Discord installed on their device, they can simply click on the hyperlink which
+        leads to your profile on the web version of Discord.</p>
     
     <a id='source' href='https://github.com/Lozarth/addmeondiscord'>Website Source</a>
 
