--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Add me on Discord</title>
+    <title>Profile - Add me on Discord</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script>
         var id = window.location.hash.substr(1)
