--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
             text-align: center;
         }
 
+        #closewindow {
+            text-align: center;
+        }
+
         #manual {
             text-align: center;
         }
