--- a/instructions.html
+++ b/instructions.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
 <head>
     <title>Instructions - Add me on Discord</title>
     
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <script async src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8868412699021244' crossorigin='anonymous'></script>
 </head>
 
 <body>
     <h1>How to use this website?</h1>
-    <ol type="1">
+    <ol type='1'>
         <li>Copy your Discord ID</li>
         <li>Then add your Discord ID to the end of this link: https://discordprofile.lozarth.xyz/#xxxxxxxxxxxx</li>
         <li>Replace the x's with your Discord ID <b>(Leave the hashtag!)</b></li>
     </ol>
 
     <p>Example:</p>
-    <img src="example.png" alt="example">
+    <img src='example.png' alt='example'>
 
     <p>You can use this link to redirect people to your Discord profile using your ID instead of sharing your
         ever-changing username and tag.</p>
