--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <title>Profile - Add me on Discord</title>
 
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <!-- SEO -->
+    <meta name='description' content='Add this user on Discord!'>
+    <meta name='keywords' content='Discord'>
+    <link rel='author' href='/#339492485854396426'>
+    <meta property='og:title' content='Profile - Add me on Discord' />
+    <meta property='og:description' content='Add this user on Discord!' />
 
     <!-- Scripts in the head are executed before the body is loaded -->
     <script>
