--- a/instructions.html
+++ b/instructions.html
@@ -5,6 +5,13 @@
     <title>Instructions - Add me on Discord</title>
     
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+
+    <!-- SEO -->
+    <meta name='description' content='How to use Add me on Discord'>
+    <meta name='keywords' content='Discord'>
+    <link rel='author' href='/#339492485854396426'>
+    <meta property='og:title' content='Instructions - Add me on Discord' />
+    <meta property='og:description' content='How to use Add me on Discord' />
 </head>
 
 <body>
