--- a/instructions.html
+++ b/instructions.html
@@ -18,7 +18,7 @@
     <h1>How to use this website?</h1>
     <ol type='1'>
         <li>Copy your Discord ID</li>
-        <li>Then add your Discord ID to the end of this link: https://discordprofile.lozarth.xyz/#xxxxxxxxxxxx</li>
+        <li>Then add your Discord ID to the end of this link: https://discord.profile.md/#xxxxxxxxxxxx</li>
         <li>Replace the x's with your Discord ID <b>(Leave the hashtag!)</b></li>
     </ol>
 
