--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             id = id.substr(1)
         }
 
-        if (isNaN(id) || id.length < 17 || id.length > 19) {
+        if (isNaN(id) || id.length !== 18) {
             window.location.href = '/instructions.html' // Using /instructions.html will redirect to the instructions page on the same domain | https://developer.mozilla.org/en-US/docs/Web/API/Location
         }
     </script>
