--- a/instructions.html
+++ b/instructions.html
@@ -15,19 +15,18 @@
 
 <body>
     <h1>How to use this website?</h1>
-    <ol type='1'>
-        <li>Copy your Discord ID</li>
-        <li>Then add your Discord ID to the end of this link (click to copy)</li>
-        <a href='https://discord.profile.md/#xxxxxxxxxxxx' onclick='window.prompt("Copy to clipboard: Ctrl+C, Enter", "https://discord.profile.md/#xxxxxxxxxxxx"); return false;'>https://discord.profile.md/#xxxxxxxxxxxx</a>
-        <li>Replace the x's with your Discord ID <b>(Leave the hashtag!)</b></li>
-    </ol>
 
-    <p>Example:</p>
-    <img src='example.png' alt='example'>
+    <p>Copy your Discord ID</p>
+    <p>Then add your Discord ID to the end of this link (click to copy)</p>
+    <a href='https://discord.profile.md/#xxxxxxxxxxxx'
+        onclick='window.prompt("Copy to clipboard: Ctrl+C, Enter", "https://discord.profile.md/#xxxxxxxxxxxx"); return false;'>https://discord.profile.md/#xxxxxxxxxxxx</a>
+    <p>Replace the x's with your Discord ID <b>(Leave the hashtag!)</b></p>
 
-    <p>You can use this link to redirect people to your Discord profile using your ID instead of sharing your ever-changing username and tag.</p>
+    <p>You can use this link to redirect people to your Discord profile using your ID instead of sharing your
+        ever-changing username and tag.</p>
     <p>This link will send your profile to their Discord client or on mobile, to their Discord app.</p>
-    <p>Alternatively, if they do not have Discord installed on their device, they can simply click on the hyperlink which leads to your profile on the web version of Discord.</p>
+    <p>Alternatively, if they do not have Discord installed on their device, they can simply click on the hyperlink
+        which leads to your profile on the web version of Discord.</p>
 
     <a id='source' href='https://github.com/Lozarth/addmeondiscord'>Website Source</a>
 
