--- a/instructions.html
+++ b/instructions.html
@@ -45,8 +45,9 @@
             text-align: center;
         }
 
-        ol {
-            text-align: center;
+        a {
+            color: #dcddde;
+            text-decoration: none;
         }
 
         img {
