--- a/instructions.html
+++ b/instructions.html
@@ -46,8 +46,9 @@
         }
 
         a {
-            color: #dcddde;
+            color: #7289da;
             text-decoration: none;
+            text-align: center;
         }
 
         img {
